--- a/stray.css
+++ b/stray.css
@@ -13,7 +13,7 @@
     }
 
     .main {
-        width:1050px;
+        width:max-content;
         height:550px;
     }
 
@@ -48,7 +48,7 @@
     .main-body {
         font-size:17px;
         position:relative;
-        right:25%;
+        right:55%;
         top:10%;
     }
 
