--- a/stray.css
+++ b/stray.css
@@ -13,8 +13,9 @@
     }
 
     .main {
-        width:max-content;
-        height:550px;
+        width:100%;
+        height:auto;
+        position:fixed;
     }
 
 
