--- a/stray.css
+++ b/stray.css
@@ -24,7 +24,7 @@
 /* PRIMARY WOLF IMAGE CSS END */
 /* PAGE TITLE CSS START */
 
-    #main-title {
+    .main-title {
         font-size:28px;
         font-weight:800;
         
