--- a/stray.css
+++ b/stray.css
@@ -18,7 +18,8 @@
 
     .main-image {
         width:400px;
-        translate:10%;
+        position:fixed;
+        right:10%;
     }
 
 /* PRIMARY WOLF IMAGE CSS END */
@@ -51,8 +52,7 @@
     .main-body {
         font-size:17px;
         position:relative;
-        bottom:50%;
-        left:20%;
+        top:20%;
     }
 
 /* PAGE INFO TOP-HALF CSS START */
