--- a/stray.css
+++ b/stray.css
@@ -52,6 +52,7 @@
         font-size:17px;
         position:relative;
         top:20%;
+        right:25%;
     }
 
 /* PAGE INFO TOP-HALF CSS START */
