--- a/stray.css
+++ b/stray.css
@@ -21,7 +21,7 @@
 
     .main-image {
         width:400px;
-        position:fixed;
+        position:absolute;
     }
 
 /* PRIMARY WOLF IMAGE CSS END */
