--- a/stray.css
+++ b/stray.css
@@ -71,6 +71,8 @@
     #button-img {
         width: 50px;
         height:auto;
+        position:relative;
+        right:20px;
     }
 
 /* PAGE INFO BOTTOM-HALF CSS END */
