--- a/stray.css
+++ b/stray.css
@@ -77,6 +77,7 @@
     .main-top {
         position:relative;
         right:10%;
+        top:5%;
     }
     .text-names {
         font-size:17px;
