--- a/stray.css
+++ b/stray.css
@@ -66,7 +66,7 @@
 
         font-size:26px;
         font-weight:800;
-        position:relative;
+        position:inherit;
     }
 
 /* PAGE TITLE CSS END */
@@ -75,7 +75,7 @@
     .main-info {
         font-size:16px;
         position:relative;
-        top:35%;
+        top:55%;
         right:25%;
         width:fit-content;
     }
@@ -83,7 +83,7 @@
 /* PAGE INFO TOP-HALF CSS START */
 
     .main-top {
-        position:relative;
+        position:inherit;
         right:10%;
     }
     .text-names {
@@ -98,6 +98,7 @@
 
     .main-bottom {
         display:flex;
+        position:inherit
     }
     #button-img {
         width: 50px;
