--- a/stray.css
+++ b/stray.css
@@ -77,14 +77,19 @@
         position:relative;
         top:55%;
         right:25%;
-        width:fit-content;
+        width:245px;
+        display:flex;
     }
 
 /* PAGE INFO TOP-HALF CSS START */
 
     .main-top {
-        position:inherit;
-        right:15%;
+        font-size:16px;
+        position:relative;
+        top:55%;
+        right:25%;
+        width:245px;
+        display:flex;
     }
     .text-names {
         font-size:17px;
@@ -96,14 +101,10 @@
 /* PAGE INFO TOP-HALF CSS END */
 /* PAGE INFO BOTTOM-HALF CSS START */
 
-    .main-bottom {
-        display:flex;
-        position:inherit
-    }
     #button-img {
         width: 50px;
         height:auto;
-        position:relative;
+        position:absolute;
         right:20px;
     }
 
