--- a/stray.css
+++ b/stray.css
@@ -66,7 +66,7 @@
 
         font-size:26px;
         font-weight:800;
-        position:inherit;
+        position:relative;
     }
 
 /* PAGE TITLE CSS END */
