--- a/stray.css
+++ b/stray.css
@@ -1,7 +1,7 @@
 /* BUNDLES.CC/@STRAY CSS */
 /* PROFILE CONTAINER CSS START */
 
-body {
+#home {
     background-color:#000000;
     color:#f4ebb8;
 }
@@ -32,6 +32,7 @@ a:visited {
 .main-title {
     font-size:28px;
     font-weight:800;
+    width:fit-content;
     position:relative;
     top:30%;
     left:5%;
