--- a/stray.css
+++ b/stray.css
@@ -17,6 +17,8 @@ a:visited {
 
 .main-body {
     display:flex;
+    width:fit-content;
+    viewport-fit:calc(2rem + 1vw);
 }
 
 /* PROFILE CONTAINER CSS END */
