modified:   magpod/archives/characters/home.html 	modified:   magpod/archives/episodes/home.html 	modified:   magpod/archives/home.html 	modified:   magpod/protocol/characters/home.html 	modified:   magpod/protocol/episodes/home.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ body {
 }
     /* BASE STYLES END */
     /* INDEX STYLES START */
-#index-box div {
+#index-box {
 
-    width: 15rem;
+    width: 5rem;
     height: fit-content;
     position: absolute;
     margin: auto;
