modified:   style.css

--- a/style.css
+++ b/style.css
@@ -27,10 +27,8 @@ body {
     height: fit-content;
     position: absolute;
     margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    top: 50%;
+    right: 50%;
 
 }
     /* INDEX STYLES END */
