--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
     /* BASE STYLES START*/
+body, html {
+
+    height: 100%;
+
+}
+
 html {
 
     font-size: 14px;
-    height: 100%;
 
 }
 body {
 
     background-color: #08080a;
-    height: 100%;
 
 /* TEXT STYLE START */
     font-family: "Besley", serif;
@@ -23,7 +27,7 @@ body {
     /* INDEX STYLES START */
 #index-box {
 
-    width: 10rem;
+    width: 15rem;
     height: fit-content;
     position: relative;
     margin: auto;
