--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
     width: 15rem;
     height: fit-content;
-    position: relative;
+    position: absolute;
     margin: auto;
     top: 50%;
     right: 50%;
