--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body, html {
 
     height: 100%;
+    width: 100%;
 
 }
 
@@ -30,8 +31,10 @@ body {
     width: 15rem;
     position: absolute;
     margin: auto;
-    top: 50%;
-    right: 50%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 
 }
     /* INDEX STYLES END */
