--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ body {
 #index-box {
 
     width: 20rem;
-    height: fit-content;
+    height: 25rem;
     position: absolute;
-    margin: 0 auto;
+    margin: auto;
     top: 0;
     right: 0;
     bottom: 0;
