modified:   style.css

--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
     /* INDEX STYLES START */
 #index-box {
 
-    width: 100px;
-    height: 50px;
+    width: 20rem;
+    height: 15rem;
     position: absolute;
     margin: auto;
     top: 0;
