--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
     /* INDEX STYLES START */
 #index-box {
 
-    width: 20rem;
-    height: 15rem;
+    width: 500px;
+    height: 300px;
     position: absolute;
     margin: auto;
     top: 0;
