--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
     /* INDEX STYLES START */
 #index-box {
 
-    width: 500px;
-    height: 300px;
+    width: calc(500px + 2vw);
+    height: calc(300px + 2vh);
     position: absolute;
     margin: auto;
     top: 0;
