--- a/style.css
+++ b/style.css
@@ -29,13 +29,14 @@ body {
 #index-box {
 
     width: 400px;
-    height: 200px;
+    height: 100px;
     position: absolute;
     margin: auto;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    vertical-align: middle;
 
 }
     /* INDEX STYLES END */
