modified:   style.css

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h2.protocol, h3.protocol, .tmpquote {
 span.protocol {
 
     font-weight: 700;
-    color: #d62a2a;
+    color: #ec2a2a;
 
 }
 h3.protocol, .tmpquote, .tmpepdesc {
