--- a/style.css
+++ b/style.css
@@ -1,150 +1,201 @@
     /* BASE STYLES START*/
-html {
+    html {
 
-    font-size: 14px;
-
-}
-body {
-
-    background-color: #08080a;
-
-/* TEXT STYLE START */
-    font-family: "Besley", serif;
-    font-weight: 500;
-    font-size: 1.3rem;
-    color: #faf1e5;
+        font-size: 14px;
     
-/* TEXT STYLE END */
-
-}
-a:link {
-
-    color: #eee6c1;
-
-}
-a:visited {
-
-    color: #d8d3bc;
-
-}
-a:hover {
-
-    color: #e9ebb9;
-
-}
-    /* BASE STYLES END */
-    /* INDEX STYLES START */
-#index-box {
-
-    width: 220px;
-    height: 140px;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-#index-txt {
+    }
+    body {
     
-    text-align: justify;
-
-}
-    /* INDEX STYLES END */
-    /* SHARED MAGPOD STYLES START */
-h2 {
-
-    font-size: 1.7rem;
-
-}
-h3 {
-
-    font-size: 1.4rem;
-    font-style: italic;
-
-}
-h6 {
-
-    font-weight: 700;
-    font-size: 1.1rem;
-    font-style: italic;
-    text-align: left;
-
-}
-section {
-
-    display: flex;
-    flex-flow: row wrap;
-
-} 
-div.analysis {
+        background-color: #08080a;
     
-    flex-flow: column;
-    width: 900px;
-
-}
-div.sections {
-
-    line-height: 0.75rem;
-    margin-top: 2rem;
-
-}
-p.sections {
-
-    text-align: justify;
-    font-size: 1.1rem;
-
-}
-span.prompt {
-
-    font-weight: 700;
-    font-size: 1.2rem;
-
-}
-span.analysis {
-
-    text-indent: 5rem;
-    line-height: 1.75rem;
-    margin-top: 1rem;
-
-}
-.epnum {
-
-    font-weight: 900;
+    /* TEXT STYLE START */
+        font-family: "Besley", serif;
+        font-weight: 500;
+        font-size: 1.3rem;
+        color: #faf1e5;
+        
+    /* TEXT STYLE END */
     
-}
-  
-    /* SHARED MAGPOD STYLES END */
-    /* THE MAGNUS ARCHIVES STYLES START */
-
-
-    /* THE MAGNUS ARCHIVES STYLES END */
-    /* THE MAGNUS PROTOCOL STYLES START */
-h2.protocol, h3.protocol, h6.protocol {
-
-    color: #dc6464;
-
-}
-span.protocol {
-
-    color: #ec2a2a;
-
-}
-
-.tmpepdesc {
-
-    color: #d1a2a2;
-    font-size: 0.9rem;
-    font-style: italic;
-    text-align: right;
-    position: relative;
-    bottom: 10%;
-    right: 30%;
+    }
+    a:link {
     
-}
+        color: #eee6c1;
+    
+    }
+    a:visited {
+    
+        color: #d8d3bc;
+    
+    }
+    a:hover {
+    
+        color: #e9ebb9;
+    
+    }
+        /* BASE STYLES END */
+        /* INDEX PAGE STYLES START */
+    #index-box {
+    
+        width: 220px;
+        height: 140px;
+        position: absolute;
+        margin: auto;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    #index-txt {
+        
+        text-align: justify;
+    
+    }
+        /* INDEX PAGE STYLES END */
+        /* SHARED MAGPOD STYLES START */
+    h2 {
+    
+        text-indent: 2.5rem;
+        font-size: 1.7rem;
+    
+    }
+    .epnum {
+    
+        font-weight: 900;
+        
+    }
+    h3 {
+    
+        text-indent: 5rem;
+        font-size: 1.4rem;
+        font-style: italic;
+        margin-bottom: -1rem;
+    
+    }
+    h6 {
+    
+        font-weight: 650;
+        font-size: 1.1rem;
+        font-style: italic;
+        text-align: right;
+    
+    }
+    body.flex {
+    
+        display: flex;
+        flex-flow: row wrap;
+    
+    } 
+    article {
+        
+        flex-flow: column;
+        width: 700px;
+        padding: 2.5%;
+    
+    }
+    aside {
 
-    /* THE MAGNUS PROTOCOL STYLES END */
+        display: inherit;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+
+    }
+    aside div {
+
+        margin: 1rem;
+        display: inherit;
+        flex-flow: column;
+
+    }
+    div.sect {
+    
+        line-height: 0.75rem;
+        margin-top: 2rem;
+    
+    }
+    .prompt {
+    
+        font-weight: 700;
+        font-size: 1.2rem;
+    
+    }
+    section.info p {
+    
+        text-align: justify;
+        font-size: 1.1rem;
+    
+    }
+    p.analysis {
+    
+        text-indent: 2.5rem;
+        line-height: 1.75rem;
+        margin-top: -0.5rem;
+    
+    }
+    .epdesc {
+
+        font-size: 0.9rem;
+        font-style: italic;
+        text-align: right;
+        position: relative;
+        bottom: 45%;
+        right: 40%;
+
+    }
+    .key {
+
+        display: inherit;
+        flex-flow: row wrap;
+        justify-content: space-around;
+
+    }
+    div.key .imp, 
+    span.imp {
+
+        font-weight: 600;
+
+    }
+    div.key .sus, 
+    span.sus  {
+      
+        font-style: italic;
+
+    }
+        /* SHARED MAGPOD STYLES END */
+        /* THE MAGNUS ARCHIVES STYLES START */
+    
+    
+        /* THE MAGNUS ARCHIVES STYLES END */
+        /* THE MAGNUS PROTOCOL STYLES START */
+    h2.protocol, h3.protocol, h6.protocol {
+    
+        color: #dc6464;
+    
+    }
+    span.protocol, p.protocol {
+    
+        color: #ec2a2a;
+    
+    }
+    .epdesc.protocol {
+    
+        color: #d1a2a2;
+        
+    }
+    div.key .imp.protocol, 
+    span.imp.protocol  {
+        color:#a06a6e
+    }
+    div.key .sus.protocol, 
+    span.sus.protocol  {
+        color:#c3bbb1
+    }
+    div.key .ment.protocol, 
+    span.ment.protocol  {
+        color:#c1b6b7
+    }
+        /* THE MAGNUS PROTOCOL STYLES END */
