--- a/style.css
+++ b/style.css
@@ -99,11 +99,12 @@
     aside {
 
         display: inherit;
-        justify-content: center;
+        align-items: center;
         flex-flow: column;
         font-size: 1rem;
         width: 375px;
-        position:sticky;
+        position: sticky;
+        top: 5%
 
     }
     aside div {
