modified:   style.css

--- a/style.css
+++ b/style.css
@@ -104,7 +104,8 @@
         font-size: 1rem;
         width: 375px;
         position: sticky;
-        top: 5%
+        top: 10%;
+        align-self: flex-start
 
     }
     aside div {
